# agend-terminal

./: .agend-managed  .gitignore  .gitlab-ci.yml  .gitmodules  ARCHITECTURE-REVIEW.md  BIND-SELF-STARTPOINT-SPIKE.md  CANONICAL-HEARTBEAT-SPIKE.md  CHANGELOG.md  CHANGELOG.zh-TW.md  CLAUDE.md  CLAUDE.zh-TW.md  CODE_REVIEW_2026-04-12.md  CONTRIBUTING.md  CONTRIBUTING.zh-TW.md  Cargo.toml  DESIGN-OFFTHREAD-P1.md  FORCE-PUSH-SHIM-SPIKE.md  RCA-2741-CI-CONTINUATION.md  RCA-2741-R2-CONVERGED.md  README.md  README.zh-TW.md  SESSION-HANDOFF.md  SHADOW-OBSERVER-ARCH-2413.md  SHADOW-OBSERVER-OPENCODE-SPIKE.md  SPIKE-1478.md  SPIKE-1509.md  SPIKE-1525.md  SPIKE-2342-hardening-manifest.md  SPIKE-2342-inbound-adapter.md  SPIKE-2466.md  SPIKE-2737-MANIFEST.md  SPIKE-MANIFEST-2379-deny-strings.md  SPIKE-MANIFEST-freeze-3-rca.md  SPIKE-NOTES.md  SPIKE-cifail-notify-quality.md  bugreport-20260412-200604.txt  bugreport-20260412-200930.txt  build.rs  codecov.yml  fleet.yaml  (+1 more)
.cargo/: audit.toml
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE.zh-TW.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.zh-TW.md  config.yml  feature_request.md  feature_request.zh-TW.md
.github/workflows/: behavioral-nightly-real.yml  behavioral-nightly.yml  ci.yml  daemon-boot-flake-gate.yml  dco.yml  loc-overrun-check.yml  release.yml
.kiro/skills/: sigma  skill-forge
assets/appimage/: AppRun  agend-terminal.desktop
assets/hooks/: prepare-commit-msg
assets/service/: launchd.plist.template  scheduler.task.xml.template  systemd.service.template
assets/windows/: agend-terminal.manifest  agend-terminal.rc
docs/: ARCHITECTURE-14-LEDGER.md  ARCHITECTURE-14-LEDGER.zh-TW.md  ARCHITECTURE-GROUPS.md  ARCHITECTURE-QUICK-START.md  AUDIT-HEALTH-2026-05-DECISIONS.md  AUDIT-sprint54-chdirpass-design-intent-2026-05-08.md  AUDIT-sprint54-p2-7-flaky-tests-triage-2026-05-08.md  BACKEND-CAPABILITY-MATRIX.md  BACKEND-CAPABILITY-MATRIX.zh-TW.md  BUG-orphan-mcp-server.md  CHANNEL-AUDIT-COMMS.md  CHANNEL-AUDIT-GIT.md  CI-DOWN-SOP.md  CI-DOWN-SOP.zh-TW.md  CLI.md  CLI.zh-TW.md  CODE-REVIEW-2026-06-14-REPRO-TESTS.md  CODE-REVIEW-2026-06-14.md  COMPATIBILITY.md  COMPATIBILITY.zh-TW.md  CUTOVER-typed-review-receipts.md  DAEMON-LOCK-ORDERING.md  DAEMON-LOCK-ORDERING.zh-TW.md  DESIGN-discord-adapter.md  DESIGN-discord-bugfixes.md  DESIGN-discord-default-feature.md  DESIGN-notify-noise-unified.md  DESIGN-quickstart-discord.md  DESIGN-sprint55-p0a-channel-discipline-guard.md  DESIGN-sprint55-p0b-unified-bind.md  DESIGN-sprint55-p0c-auto-bind-task-class-filter.md  DESIGN-stage-b-ux.md  DESIGN-task-status-reactions.md  DESIGN-telegram-inbound-attachments.md  DESIGN-waiting-on-heartbeat.md  EVAL-cross-platform.md  F685-FIXTURE-CORPUS.md  F9-PRODUCTIVE-OUTPUT-GATE.md  FEATURE-agent-interaction.md  FEATURE-agent-interaction.zh-TW.md  (+173 more)
docs/architecture/: ARCHITECTURE-14-LEDGER.md
docs/archived/: CHANNEL-AUDIT-COMMS.md  DESIGN-OFFTHREAD-P1.md  DESIGN-topic-delete-ux.md  EVAL-cross-platform.md  FOLLOWUP-merge-idle-ready.md  FOLLOWUP-telegram-efficiency.md  FOLLOWUP-tooluse-pattern-gaps.md  HANDOVER-weak-model-instructions.md  HANDOVER-windows-phase-c.md  MIGRATION-OUTBOUND-CAPS.md  PLAN-sprint34-classifier-fix-2026-04-29.md  PLAN-sprint36-cargo-deps-cleanup-2026-04-29.md  PLAN-sprint39-ci-providers-2026-04-30.md  PLAN-sprint43-supervisor-notify-2026-04-30.md  PLAN-sprint49-channel-discipline-correction-2026-05-04.md  PLAN-terminal-app.md  PLAN-test-coverage-deep-audit-2026-04-29.md  PLAN-windows-support.md  REVIEW-2026-04-18.md  REVIEW-auto-pane.md  SHADOW-OBSERVER-QUANT-2413.md  SHADOW-OBSERVER-QUANT-CODEX-2413.md  SPRINT-19-CLEANUP-REPORT.md  SPRINT-27-CANDIDATE-CHALLENGE-2026-04.md  TASK-BOARD-AUTO-CLOSE-REDESIGN.md  (+1 more)
examples/: pty_smoke.rs  pty_smoke_minimal.rs
scripts/: agend-wrapper.sh  build_agentic_git_shim.sh  capture-backend-sgr.sh  check_loc_overrun.sh  clippy-all-platforms.sh  fmt-owned.sh  install-hooks.sh  preflight.sh  repro-team-tab-bug.sh  test-team-dedup.sh  test_check_loc_overrun.sh  test_ctrlc_v2.py  test_fmt_owned.sh  tui_dump.py  tui_send.py  verify-awaiting-operator.sh  verify-review-fixes.sh
src/: admin.rs  agent.rs  agent_cli.rs  agent_ops.rs  agy_workspace.rs  api.rs  api_activity_probe.rs  app.rs  auth_cookie.rs  backend.rs  backend_harness.rs  backend_model.rs  backend_profile.rs  behavioral.rs  binding.rs  branch_sweep.rs  bridge_client.rs  bugreport.rs  capture.rs  channel.rs  claim_verifier.rs  cleanup_intents.rs  cli.rs  client.rs  config_integrity.rs  connect.rs  connect_proxy.rs  daemon.rs  daemon_config.rs  decisions.rs  deployments.rs  discord.rs  dispatch_tracking.rs  display_time.rs  env_util.rs  ephemeral_driver.rs  ephemeral_tracking.rs  error.rs  event_log.rs  fleet.rs  (+68 more)
tests/: active_peer_pid_watch.rs  agend_git_kill_only_fail_closed_2524.rs  agend_git_shim_app_mode_wiring.rs  agend_git_shim_phase1.rs  agend_git_shim_phase2.rs  agend_git_shim_phase4_stress.rs  agent_path_colon_split_invariant_1504.rs  agentic_core_single_source.rs  agentic_git_bin_target_invariant.rs  agentic_git_monorepo_layout.rs  agentic_git_shim_swap.rs  anti_pattern_invariant.rs  anti_stall_dispatched_at_doc_daemon_dispatch_idle.rs  app_singleton_fail_closed.rs  arch14_cross_agent_identity_red.rs  atomic_write_invariant.rs  attached_path_mcp_invariants.rs  behavioral_shadow.rs  block_on_runtime_guard_invariant.rs  build_provenance_version.rs  canonical_guard_hook.rs  cargo_include_invariant.rs  channel_ops_via_daemon_api_only.rs  cleanup_init_synonym_e2e.rs  cli_smoke.rs  clippy_gate_helper_script.rs  context-cost-benchmark.sh  core_lock_disk_io_daemon_supervisor.rs  core_mutex_invariant.rs  cron_offload_caller_invariant.rs  crud_consolidation_routing.rs  daemon_boot_gate_filter.txt  daemon_boot_gate_invariant.rs  daemon_git_helper_invariant.rs  decision_timeout_cancel_locked_daemon_dispatch_idle.rs  discord_keepalive_sleep_position_channel.rs  dispatch_idle_dedup_locked_daemon_dispatch_idle.rs  docs_bilingual_invariant.rs  e2e_workflow.rs  enqueue_drop_invariant.rs  (+112 more)
(+591 files in other folders)
