[package]
name = "agend-terminal"
version = "0.3.2"
edition = "2021"
description = "Agent Process Manager — orchestrate AI coding agents with PTY isolation, fleet management, and 35 MCP tools"
license = "MIT"
repository = "https://github.com/suzuke/agend-terminal"
keywords = ["agent", "pty", "terminal", "mcp", "orchestration"]
categories = ["command-line-utilities", "development-tools"]

# Whitelist what ships on crates.io — everything not listed is excluded.
# Keeps internal docs/scripts/test fixtures out of the published crate.
# If you add a path the build needs (e.g. a new asset for build.rs), add it here.
include = [
    "src/**/*.rs",
    "build.rs",
    "assets/windows/*",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[lints.clippy]
unwrap_used = "deny"

# Menu-bar / system-tray resident app (see docs/archived/PLAN-tray-resident.md).
# Default build stays lean: `tray-icon` + `tao` only pull in when
# `--features tray` is passed (release binaries ship with it).
[features]
default = []
tray = ["dep:tray-icon", "dep:tao", "dep:toml"]

[profile.release]
strip = true
lto = true

[dependencies]
# PTY
portable-pty = "0.9"

# Terminal
crossterm = "0.28"
alacritty_terminal = "0.26"
ratatui = "0.29"

# Concurrency
crossbeam = "0.8"

# Async (for Telegram + daemon UDS)
tokio = { version = "1", features = ["rt", "net", "io-util", "fs", "macros", "time"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Telegram — rustls backend avoids macOS SecureTransport/Keychain/OCSP flakiness
teloxide = { version = "0.13", default-features = false, features = ["macros", "ctrlc_handler", "rustls"] }

# Utilities
anyhow = "1"
fs2 = "0.4"
dirs = "6"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
cron = "0.15"
ctrlc = { version = "3", features = ["termination"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
arboard = "3.6.1"
unicode-width = "0.2"
which = "6"

# Crypto-grade random for API-connection cookie (P1-10)
getrandom = "0.2"
iana-time-zone = "0.1.65"
# Menu-bar / system-tray (feature = "tray"). tray-icon loads PNG via
# Icon::from_rgba natively — do NOT pull the `image` crate. `toml` is
# for `$AGEND_HOME/tray.toml`; dev-dependencies already list it, so the
# runtime entry here only adds it to release graphs when `tray` is on.
tray-icon = { version = "0.22", optional = true }
tao = { version = "0.35", optional = true }
toml = { version = "0.8", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_System_Console", "Win32_Foundation", "Win32_System_Registry"] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2"

[dev-dependencies]
# Used only for asserting that codex_trust_directory writes syntactically
# valid TOML — the prod code appends raw text, it doesn't depend on this crate.
toml = "0.8"
