[package]
name = "agend-terminal"
version = "0.5.0"
edition = "2021"
rust-version = "1.87"
description = "Agent Process Manager — orchestrate AI coding agents with PTY isolation, fleet management, and 35 MCP tools"
license = "MIT"
repository = "https://github.com/suzuke/agend-terminal"
keywords = ["agent", "pty", "terminal", "mcp", "orchestration"]
categories = ["command-line-utilities", "development-tools"]

# Whitelist what ships on crates.io — everything not listed is excluded.
# Keeps internal docs/scripts/test fixtures out of the published crate.
# If you add a path the build needs (e.g. a new asset for build.rs), add it here.
include = [
    "src/**/*.rs",
    "build.rs",
    "assets/windows/*",
    # `src/protocol.rs` does `include_str!("../docs/FLEET-DEV-PROTOCOL-v1.md")`
    # at compile time. Without this entry, `cargo publish`'s verification
    # build (which works on the packaged tarball, not the source tree)
    # fails with "No such file or directory" — caught the hard way during
    # the v0.4.0 publish attempt. Add any future bundled docs here too.
    "docs/FLEET-DEV-PROTOCOL-v1.md",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[lints.clippy]
unwrap_used = "deny"

# Menu-bar / system-tray resident app (see docs/archived/PLAN-tray-resident.md).
# Default build stays lean: `tray-icon` + `tao` only pull in when
# `--features tray` is passed (release binaries ship with it).
[features]
default = []
tray = ["dep:tray-icon", "dep:tao", "dep:toml"]
discord = ["dep:twilight-gateway", "dep:twilight-http", "dep:twilight-model"]

[profile.release]
strip = true
lto = true

[dependencies]
# PTY
portable-pty = "0.9"

# Terminal
crossterm = "0.28"
alacritty_terminal = "0.26"
ratatui = "0.29"

# Concurrency
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Async (for Telegram + daemon UDS)
tokio = { version = "1", features = ["rt", "net", "io-util", "fs", "macros", "time"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["parsing", "full"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde_yaml_ng = "0.10"

# Telegram — rustls backend avoids macOS SecureTransport/Keychain/OCSP flakiness
teloxide = { version = "0.15", default-features = false, features = ["macros", "ctrlc_handler", "rustls"] }

# Utilities
async-trait = "0.1"
anyhow = "1"
fs4 = "0.12"
dirs = "6"
regex = "1"
# Sprint 24 P0 PR2 — task_sweep forensic api_response_hash on PrSnapshot.
# SHA-256 crypto-grade hash + hex encoding so reviewers can correlate an
# event's response_hash against an archived GitHub API response without
# trusting a non-crypto hash to be collision-resistant.
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
cron = "0.15"
ctrlc = { version = "3", features = ["termination"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
arboard = "3.6.1"
unicode-width = "0.2"
which = "6"
sysinfo = "0.32"

# Crypto-grade random for API-connection cookie (P1-10)
getrandom = "0.3"
iana-time-zone = "0.1.65"
# Menu-bar / system-tray (feature = "tray"). tray-icon loads PNG via
# Icon::from_rgba natively — do NOT pull the `image` crate. `toml` is
# for `$AGEND_HOME/tray.toml`; dev-dependencies already list it, so the
# runtime entry here only adds it to release graphs when `tray` is on.
tray-icon = { version = "0.22", optional = true }
tao = { version = "0.35", optional = true }
toml = { version = "0.8", optional = true }

# Discord (feature = "discord"). Modular twilight crates — gateway for
# WS shard lifecycle, http for REST, model for typed Discord API structs.
# Pin to 0.16 series (Discord API v10). rustls-native-roots avoids
# macOS SecureTransport flakiness (same rationale as teloxide rustls).
twilight-gateway = { version = "0.16", optional = true, default-features = false, features = ["rustls-native-roots", "rustls-ring"] }
twilight-http = { version = "0.16", optional = true, default-features = false, features = ["rustls-native-roots", "rustls-ring"] }
twilight-model = { version = "0.16", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_System_Console", "Win32_Foundation", "Win32_System_Registry", "Win32_System_JobObjects"] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3"

[dev-dependencies]
# CLI binary smoke testing (Sprint 42 Phase 1)
assert_cmd = "2.0"
predicates = "3.1"
insta = "1.39"
# Used only for asserting that codex_trust_directory writes syntactically
# valid TOML — the prod code appends raw text, it doesn't depend on this crate.
toml = "0.8"
# Log-capture for failure-visibility regression pins (DESIGN-stage-b-ux.md
# §7 PR-C names `tracing-test` as the sanctioned approach for asserting
# `tracing::warn!` records are actually emitted).
tracing-test = "0.2"
