[package]
name = "agend-terminal"
version = "0.9.0"
edition = "2021"
rust-version = "1.88"
description = "Agent Process Manager — orchestrate AI coding agents with PTY isolation, fleet management, and 35 MCP tools"
license = "Apache-2.0"
repository = "https://github.com/suzuke/agend-terminal"
keywords = ["agent", "pty", "terminal", "mcp", "orchestration"]
categories = ["command-line-utilities", "development-tools"]

# Whitelist what ships on crates.io — everything not listed is excluded.
# Keeps internal docs/scripts/test fixtures out of the published crate.
# If you add a path the build needs (e.g. a new asset for build.rs), add it here.
include = [
    "src/**/*.rs",
    "build.rs",
    "assets/windows/*",
    # `src/binding.rs` does `include_str!("../assets/hooks/prepare-commit-msg")`
    # + `.../prepare-commit-msg.ps1` (Sprint 53 #446 Phase 1 trailer hook).
    # Same lesson as the `docs/FLEET-DEV-PROTOCOL.md` entry below: the
    # `cargo publish` verify step builds from the packaged tarball, so
    # every `include_str!` target must appear here. v0.6.0 publish-blocker
    # hotfix (silent-drop class 5th instance — human comment alone didn't
    # prevent a second occurrence; Phase 2 invariant test deferred to v0.6.1).
    "assets/hooks/*",
    # Sprint 57 Wave 3 PR-3 (#548 Phase 3): `src/service/*.rs` does
    # `include_str!("../../assets/service/launchd.plist.template")`
    # + systemd.service.template + scheduler.task.xml.template for
    # the `agend-terminal service install` cross-platform helper.
    # Without these the `cargo publish` verify build fails on a
    # silent-drop-class missing-asset error.
    "assets/service/*",
    # `src/protocol.rs` does `include_str!("../docs/FLEET-DEV-PROTOCOL.md")`
    # at compile time. Without this entry, `cargo publish`'s verification
    # build (which works on the packaged tarball, not the source tree)
    # fails with "No such file or directory" — caught the hard way during
    # the v0.4.0 publish attempt. Add any future bundled docs here too.
    "docs/FLEET-DEV-PROTOCOL.md",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
    "NOTICE",
    "CHANGELOG.md",
]

[lints.clippy]
unwrap_used = "deny"

# Menu-bar / system-tray resident app (see docs/archived/PLAN-tray-resident.md).
# Default build stays lean: `tray-icon` + `tao` only pull in when
# `--features tray` is passed (release binaries ship with it).
[features]
default = []
tray = ["dep:tray-icon", "dep:tao", "dep:toml"]
discord = ["dep:twilight-gateway", "dep:twilight-http", "dep:twilight-model"]

# #2247 (build-profile only — NO feature code): ThinLTO + parallel codegen units
# cut release link time substantially (operator-measured ~40m→17m) at a
# negligible runtime cost. `lto = "thin"` parallelizes the cross-crate optimize
# that fat LTO serializes; `codegen-units = 16` (made explicit) lets the
# pre-LTO codegen run in parallel. `strip` retained.
[profile.release]
strip = true
lto = "thin"
codegen-units = 16

[dependencies]
# PTY
portable-pty = "0.9"

# Terminal
crossterm = "0.29"
alacritty_terminal = "0.26"
ratatui = "0.30"

# Concurrency
crossbeam-channel = "0.5"
parking_lot = "0.12"
# Lock-free single-writer/multi-reader snapshot publish for off-thread parse
# (Option X, AGEND_OFFTHREAD_PARSE): render loads an immutable GridSnapshot
# without blocking the per-pane parser thread.
arc-swap = "1"

# Async (for Telegram + daemon UDS)
tokio = { version = "1", features = ["rt", "net", "io-util", "fs", "macros", "time"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["parsing", "full", "visit"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde_yaml_ng = "0.10"

# Telegram — rustls backend avoids macOS SecureTransport/Keychain/OCSP flakiness
teloxide = { version = "0.17", default-features = false, features = ["macros", "ctrlc_handler", "rustls"] }

# Utilities
async-trait = "0.1"
anyhow = "1"
fs4 = "1.1"
dirs = "6"
# Issue #893: dunce::canonicalize strips Windows `\\?\` UNC verbatim prefix
# when safe, so the path encoding matches what claude CLI's Node
# `fs.realpathSync.native` produces. Used in claude_session::has_resumable
# to canonicalize cwd before encoding the project-dir lookup name.
dunce = "1"
regex = "1"
memchr = "2"
# Sprint 24 P0 PR2 — task_sweep forensic api_response_hash on PrSnapshot.
# SHA-256 crypto-grade hash + hex encoding so reviewers can correlate an
# event's response_hash against an archived GitHub API response without
# trusting a non-crypto hash to be collision-resistant.
# #1934: coordinated RustCrypto upgrade — hmac 0.13 requires `D: EagerHash`,
# which sha2 0.10's Sha256 does not implement (why dependabot's single-crate
# bump #1926 failed); sha2 0.11 + digest 0.11 + hmac 0.13 move together.
sha2 = "0.11"
# #1576: HMAC-SHA256 keyed-hash integrity for the operator-mode authority file
# (single-user injection-containment defense-in-depth — pairs with sha2 above).
hmac = "0.13"
# #1934: explicit digest pin so the trait crate the hmac/sha2 pair resolve
# against is visible (and bumps with them, not via transitive drift).
digest = "0.11"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
cron = "0.16"
ctrlc = { version = "3", features = ["termination"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
# #914: daily-rotating + max_log_files-bounded daemon.log via `rolling::Builder`.
# Same-org as `tracing` / `tracing-subscriber`; transitive deps already in tree
# (time, parking_lot, crossbeam-channel). Used only from the daemon path in
# `crate::logging`; CLI commands keep stderr.
tracing-appender = "0.2"
arboard = "3.6.1"
# #2435 TUI image paste: encode clipboard RGBA → PNG. Pinned to "0.18" to UNIFY
# with the `png 0.18.1` already in the tree (transitively via arboard's own
# backends + the `image` crate), so this adds NO second png version. Do NOT use
# the heavyweight `image` crate here (see the `tray` note below) — `png` alone
# is the lightweight encoder we need.
png = "0.18"
unicode-width = "0.2"
which = "8"
# #2288 re-bumped sysinfo 0.38→0.39.3, which requires rustc 1.95 and broke the
# v0.9.0 release MSRV (1.88) gate. Re-pinned to 0.38 (MSRV 1.88) — see [0.9.0].
sysinfo = "0.38"
# Crypto-grade random for API-connection cookie (P1-10)
getrandom = "0.4"
iana-time-zone = "0.1.65"
# Menu-bar / system-tray (feature = "tray"). tray-icon loads PNG via
# Icon::from_rgba natively — do NOT pull the `image` crate. `toml` is
# for `$AGEND_HOME/tray.toml`; dev-dependencies already list it, so the
# runtime entry here only adds it to release graphs when `tray` is on.
tray-icon = { version = "0.24", optional = true }
tao = { version = "0.35", optional = true }
toml = { version = "1.1", optional = true }

# Discord (feature = "discord"). Modular twilight crates — gateway for
# WS shard lifecycle, http for REST, model for typed Discord API structs.
# Pin to 0.16 series (Discord API v10). rustls-native-roots avoids
# macOS SecureTransport flakiness (same rationale as teloxide rustls).
twilight-gateway = { version = "0.17", optional = true, default-features = false, features = ["rustls-native-roots"] }
twilight-http = { version = "0.17", optional = true, default-features = false, features = ["rustls-native-roots"] }
twilight-model = { version = "0.17", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Threading", "Win32_System_Console", "Win32_Foundation", "Win32_System_Registry", "Win32_System_JobObjects"] }
# #1547 (A): directory junctions for the non-hidden agy workspace link. A
# junction needs no privilege, unlike `std::os::windows::fs::symlink_dir`
# (which requires Developer Mode / admin). Windows-only.
junction = "2"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3"

[dev-dependencies]
# #event-bus Step 2 (legacy-zero): a `#[ctor] #[cfg(test)]` fn registers the bus
# subscribers ONCE at test-binary load — before any test — so the integration
# tests (which `emit` to the now-sole-delivery global bus) deliver order-
# independently. Test-only; does NOT ship in the prod binary.
ctor = "0.2"
# CLI binary smoke testing (Sprint 42 Phase 1)
assert_cmd = "2.0"
predicates = "3.1"
insta = "1.39"
proptest = "1.4"
serial_test = "3"
# Used only for asserting that codex_trust_directory writes syntactically
# valid TOML — the prod code appends raw text, it doesn't depend on this crate.
toml = "1.1"
# #1812 §3.9 real-entry tests: parse the rendered launchd plist
# (`plist`) and systemd unit (`ini`/rust-ini) with REAL format parsers to
# extract the AGEND_SUPERVISED sentinel out of its structural env block —
# the templates are plain text the prod code substitutes into, so these
# crates are test-only (mirrors the `toml` dev-dep convention above).
plist = "1.7"
rust-ini = "0.21"
# Sprint 54 P1-A — `tests/cargo_include_invariant.rs` matches resolved
# `include_str!` paths against `[package].include` glob patterns
# (e.g. `src/**/*.rs`, `assets/hooks/*`). Test-only.
glob = "0.3"
# Log-capture for failure-visibility regression pins (DESIGN-stage-b-ux.md
# §7 PR-C names `tracing-test` as the sanctioned approach for asserting
# `tracing::warn!` records are actually emitted).
tracing-test = "0.2"
